--- a/.github/workflows/prettier.yml
+++ b/.github/workflows/prettier.yml
@@ -1,4 +1,4 @@
-name: Prettier
+name: Format
 
 on: [push, pull_request]
 
@@ -23,5 +23,5 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
-      - name: Run Prettier
-        run: npm run format:check
+      - name: Run Rome
+        run: npm run fmt
