--- a/package.json
+++ b/package.json
@@ -30,33 +30,32 @@
   "main": "dist/index.cjs",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "src",
-    "CHANGELOG.md",
-    "README.md"
-  ],
+  "files": ["dist", "src", "CHANGELOG.md", "README.md"],
   "scripts": {
     "dev": "tsx src/index.ts",
     "build": "unbuild",
     "stub": "unbuild --stub",
     "clean": "rm -rf dist",
-    "fmt": "rome format src test --write",
-    "lint": "rome check src test",
+    "lint": "rome check --apply-unsafe .",
+    "fmt": "rome format . --write",
     "test": "vitest",
     "coverage": "vitest run --coverage"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
-    "rome": "^12.0.0",
-    "tsx": "^3.12.2",
-    "typescript": "^5.0.2",
-    "unbuild": "^1.1.1",
-    "vitest": "^0.31.0"
+    "@types/node": "^20.3.1",
+    "rome": "^12.1.3",
+    "tsx": "^3.12.7",
+    "typescript": "^5.1.3",
+    "unbuild": "^1.2.1",
+    "vitest": "^0.32.0"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": ">=12.0.0",
+    "npm": "use `pnpm` instead",
+    "pnpm": ">=8.6.0",
+    "yarn": "use `pnpm` instead"
   },
+  "packageManager": "pnpm@8.6.2",
   "publishConfig": {
     "access": "public"
   }
