--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "declaration": true,
-    "lib": [
-      "es2019",
-      "es2020.promise",
-      "es2020.bigint",
-      "es2020.string"
-    ],
+    "lib": ["es2019", "es2020.promise", "es2020.bigint", "es2020.string"],
     "module": "commonjs",
     "target": "es2019",
     "strict": true,
@@ -19,12 +14,6 @@
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node"
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "dist",
-    "node_modules",
-    "test"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["dist", "node_modules", "test"]
 }
