--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "lint": "rome check --apply-unsafe .",
     "fmt": "rome format . --write",
     "test": "vitest",
-    "coverage": "vitest run --coverage"
+    "coverage": "vitest run --coverage",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
+    "husky": "^8.0.0",
+    "nano-staged": "^0.8.0",
     "rome": "^12.1.3",
     "tsx": "^3.12.7",
     "typescript": "^5.1.3",
@@ -55,8 +58,12 @@
     "pnpm": ">=8.6.0",
     "yarn": "use `pnpm` instead"
   },
-  "packageManager": "pnpm@8.6.2",
   "publishConfig": {
     "access": "public"
-  }
+  },
+  "nano-staged": {
+    "*.ts": "rome check --apply-unsafe .",
+    "*": "rome format --write ."
+  },
+  "packageManager": "pnpm@8.6.2"
 }
