--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "./node_modules/rome/configuration_schema.json",
+  "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
@@ -24,12 +24,15 @@
       "a11y": {
         "useKeyWithClickEvents": "off"
       },
+      "correctness": {
+        "noVoidTypeReturn": "off"
+      },
+      "nursery": {
+        "useGroupedTypeImport": "error"
+      },
       "suspicious": {
         "noExplicitAny": "off",
         "noArrayIndexKey": "off"
-      },
-      "correctness": {
-        "noVoidTypeReturn": "off"
       },
       "style": {
         "all": false
