--- a/package.json
+++ b/package.json
@@ -36,21 +36,21 @@
     "build": "unbuild",
     "stub": "unbuild --stub",
     "clean": "rm -rf dist",
-    "lint": "rome check --apply-unsafe .",
-    "fmt": "rome format . --write",
+    "lint": "biome check --apply-unsafe .",
+    "fmt": "biome format . --write",
     "test": "vitest",
     "coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@types/node": "^20.3.1",
-    "husky": "^8.0.0",
+    "@biomejs/biome": "^1.2.2",
+    "@types/node": "^20.6.2",
+    "husky": "^8.0.3",
     "nano-staged": "^0.8.0",
-    "rome": "^12.1.3",
-    "tsx": "^3.12.7",
-    "typescript": "^5.1.3",
+    "tsx": "^3.12.10",
+    "typescript": "^5.2.2",
     "unbuild": "^2.0.0",
-    "vitest": "^0.34.0"
+    "vitest": "^0.34.4"
   },
   "engines": {
     "node": ">=12.0.0",
@@ -62,8 +62,8 @@
     "access": "public"
   },
   "nano-staged": {
-    "*.ts": "rome check --apply-unsafe .",
-    "*": "rome format --write ."
+    "*.ts": "biome check --apply-unsafe .",
+    "*": "biome format . --write"
   },
   "packageManager": "pnpm@8.7.6"
 }
