--- a/renovate.json
+++ b/renovate.json
@@ -31,10 +31,10 @@
       "description": "Automatically merge devDependencies updates",
       "matchDepTypes": ["devDependencies"],
       "matchPackagePatterns": [
+        "@biomejs/biome",
         "@types/node",
         "husky",
         "nano-staged",
-        "rome",
         "tsx",
         "typescript",
         "unbuild",
