--- a/biome.json
+++ b/biome.json
@@ -3,7 +3,7 @@
   "formatter": {
     "enabled": true,
     "formatWithErrors": false,
-    "indentSize": 2,
+    "indentWidth": 2,
     "indentStyle": "space",
     "lineWidth": 80,
     "ignore": ["dist", "node_modules"]
