--- a/package.json
+++ b/package.json
@@ -22,24 +22,28 @@
   },
   "license": "MIT",
   "author": "Jörn Spangenberg <github@jrson.me> (https://jrson.me)",
+  "type": "module",
   "exports": {
-    "types": "./dist/index.d.ts",
-    "require": "./dist/index.cjs",
-    "import": "./dist/index.mjs"
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
+    },
+    "import": {
+      "types": "./dist/index.d.mts",
+      "default": "./dist/index.mjs"
+    }
   },
-  "main": "dist/index.cjs",
-  "module": "dist/index.mjs",
-  "types": "dist/index.d.ts",
-  "files": ["dist", "src"],
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.cts",
+  "files": ["dist"],
   "scripts": {
-    "dev": "tsx src/index.ts",
-    "build": "unbuild",
-    "stub": "unbuild --stub",
     "clean": "rm -rf dist",
+    "dev": "tsx src/index.ts",
+    "build": "pkgroll --target=node18.12.0 --minify",
     "lint": "biome check --apply-unsafe .",
     "fmt": "biome format . --write",
-    "test": "vitest",
-    "coverage": "vitest run --coverage",
+    "test": "node --import=tsx/esm --test ./test/colorize.test.ts",
     "prepare": "husky install"
   },
   "devDependencies": {
@@ -47,16 +51,13 @@
     "@types/node": "^20.6.2",
     "husky": "^8.0.3",
     "nano-staged": "^0.8.0",
-    "tsx": "^4.0.0",
-    "typescript": "^5.2.2",
-    "unbuild": "^2.0.0",
-    "vitest": "^1.0.0"
+    "pkgroll": "^2.0.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.2.2"
   },
   "engines": {
-    "node": ">=12.0.0",
-    "npm": "use `pnpm` instead",
-    "pnpm": ">=8.6.0",
-    "yarn": "use `pnpm` instead"
+    "node": ">=18.12.0",
+    "pnpm": ">=8.12.0"
   },
   "publishConfig": {
     "access": "public"
