--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.cts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "clean": "rm -rf dist",
     "dev": "tsx src/index.ts",
