--- a/package.json
+++ b/package.json
@@ -44,16 +44,17 @@
     "lint": "biome check --apply-unsafe .",
     "fmt": "biome format . --write",
     "test": "node --import=tsx/esm --test ./test/colorize.test.ts",
+    "quality-check": "pnpm lint && pnpm fmt && pnpm build && pnpm test",
     "prepare": "husky"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.5.3",
-    "@types/node": "^20.11.16",
-    "husky": "^9.0.10",
+    "@biomejs/biome": "^1.6.2",
+    "@types/node": "^20.11.30",
+    "husky": "^9.0.11",
     "nano-staged": "^0.8.0",
-    "pkgroll": "^2.0.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "pkgroll": "^2.0.2",
+    "tsx": "^4.7.1",
+    "typescript": "^5.4.3"
   },
   "engines": {
     "node": ">=18.12.0",
@@ -65,6 +66,5 @@
   "nano-staged": {
     "*.ts": "biome check --apply-unsafe .",
     "*": "biome format . --write"
-  },
-  "packageManager": "pnpm@8.15.5"
+  }
 }
