--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "strict": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
+    "noUncheckedIndexedAccess": true,
+    "exactOptionalPropertyTypes": true,
     "resolveJsonModule": true
   },
   "include": ["src"],
