--- a/.github/workflows/node-ci.yml
+++ b/.github/workflows/node-ci.yml
@@ -1,71 +1,82 @@
-name: Node.js CI
+name: Workflow
 
 on:
   workflow_dispatch:
 
-  pull_request:
-    branches: [main]
-    paths:
-      - '**.ts'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
-      - '.github/workflows/*.yml'
-
   push:
     branches: [main]
-    paths:
-      - '**.ts'
-      - 'package.json'
-      - 'pnpm-lock.yaml'
-      - '.github/workflows/*.yml'
+
+  pull_request:
+    branches: [main]
+
+  merge_group:
+    branches: [main]
 
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: ${{ startsWith(github.ref, 'refs/pull/') }}
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+  cancel-in-progress: true
+
+env:
+  NPM_VERSION: '21.7.2'
+  # renovate: datasource=npm depName=pnpm versioning=npm
+  PNPM_VERSION: '9.1.2'
 
 jobs:
-  ci:
-    name: Node.js CI
+  skip-check:
+    name: Skip check
+    continue-on-error: true
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+    outputs:
+      should_skip: ${{ steps.skip-check.outputs.should_skip }}
     permissions:
       actions: write
+      contents: read
+    steps:
+      - id: skip-check
+        uses: fkirc/skip-duplicate-actions@f75f66ce1886f00957d99748a42c724f4330bdcf # v5.3.1
+        with:
+          do_not_skip: '["schedule", "workflow_dispatch"]'
+          paths: |-
+            [
+              ".github/workflows/node-ci.yml",
+              "src/**",
+              "test/**",
+              "package.json",
+              "pnpm-lock.yaml"
+            ]
+          skip_after_successful_duplicate: false
+
+  node-ci:
+    name: Node.js CI
+    needs: skip-check
+    if: ${{ needs.skip-check.outputs.should_skip != 'true' }}
+    runs-on: ubuntu-latest
+    permissions:
       contents: write
+    timeout-minutes: 45
 
     steps:
       - name: Checkout code
         uses: actions/checkout@a5ac7e51b41094c92402da3b24376905380afc29 # v4.1.6
 
-      - name: Setup Node environment
+      - name: Setup PNPM
+        uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
+        with:
+          version: ${{ env.PNPM_VERSION }}
+
+      - name: Setup Node.js
         uses: actions/setup-node@60edb5dd545a775178f52524783378180af0d1f8 # v4.0.2
         with:
-          node-version: 20.10.0
-
-      - uses: pnpm/action-setup@fe02b34f77f8bc703788d5817da081398fad5dd2 # v4.0.0
-        name: Install pnpm
-        id: pnpm-install
-        with:
-          version: 8
-          run_install: false
-
-      - name: Get pnpm store directory
-        id: pnpm-cache
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
-        name: Setup pnpm cache
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          node-version: ${{ env.NPM_VERSION }}
+          cache: 'pnpm'
 
       - name: Install dependencies
-        run: pnpm install
+        run: pnpm install --frozen-lockfile --prefer-offline
 
       - name: Run build
-        run: pnpm build
+        run: pnpm run build
 
       - name: Run test
-        run: pnpm test
+        run: pnpm run test:run
+        if: always()
