--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "fmt": "biome format . --write",
     "test": "node --import=tsx/esm --test ./test/colorize.test.ts",
     "quality-check": "pnpm lint && pnpm fmt && pnpm build && pnpm test",
+    "changelogs": "node ./.scripts/changelogs.mjs",
     "prepare": "husky"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.6.3",
+    "@bscotch/workspaces": "^0.3.0",
     "@types/node": "^20.11.30",
     "husky": "^9.0.11",
     "nano-staged": "^0.8.0",
